--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -20,6 +20,9 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+                    <li class="list">
+                        <%= link_to "Messages", "#" %>
+                    </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
@@ -161,48 +164,69 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+              <div class="col-lg-8 col-lg-offset-2">
+                <%= form_tag(users_create_path) do %>
+                  <%= %>
+                  <div class="row control-group">
+                    <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <%= label_tag 'username', 'Name' %>
+                      <%= text_field_tag  'username',
+                                          nil,
+                                          class: "form-control",
+                                          placeholder: "Name",
+                                          required: true,
+                                          data: {"validation-required-message" => 'Please enter your name.'} %>
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+                  <div class="row control-group">
+                    <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <%= label_tag 'useremail', 'Email Address' %>
+                      <%= email_field_tag 'useremail',
+                                          nil,
+                                          class: 'form-control',
+                                          placeholder: "Email Address",
+                                          required: true,
+                                          data: {"validation-required-message" => 'Please enter your email address.'} %>
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+                  <div class="row control-group">
+                    <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <%= label_tag 'userphone', 'Phone Number' %>
+                      <%= telephone_field_tag 'userphone',
+                                              nil,
+                                              class: "form-control",
+                                              placeholder: "Phone Number",
+                                              required: true,
+                                              data: {"validation-required-message" => 'Please enter your phone number.'} %>
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+                  <div class="row control-group">
+                    <div class="form-group col-xs-12 floating-label-form-group controls">
+                      <%= label_tag 'userphone', 'Phone Number' %>
+                      <%= text_area_tag 'usermessag',
+                                        nil,
+                                        rows: 5,
+                                        class: "form-control",
+                                        placeholder: "Message",
+                                        required: true,
+                                        data: {"validation-required-message" => 'Please enter a message.'} %>
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+                  <br>
+                  <div id="success"></div>
+                  <div class="row">
+                    <div class="form-group col-xs-12">
+                      <%= submit_tag "Send", class:"btn btn-success btn-lg" %>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
             </div>
+
         </div>
     </section>
 
